change in composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     },
     "autoload": {
         "psr-0" : {
-            "FPDF" : "lib/",
             "Mayeco\\fPDFBundle": ""
-        }
+        },
+        "classmap": [
+            "lib/"
+        ]
     },
     "target-dir": "Mayeco/fPDFBundle",
     "extra": {
